@@ -9,6 +9,7 @@ ADD: center connect dialog on top of main frame/window
 ADD: tool tips for session tab titles
 FIX: wrong display of title text, when tab title changes
 FIX: unchecked confirmTabClose in properties (JSE6 only)
+FIX: bug id:3205299 (email addresses prefixed with "mailto:" are not considered as hotspots)
 FIX: bug id:3179868 (Text and fields are not displayed)
 FIX: bug id:3161636 (System Name not in window title bar anymore)
 FIX: bug id:3160345 (Default value of column separator looks strange)
